fix: hide horizontal scrollbar, always show vertical scrollbar

--- a/client/public/css/template.css
+++ b/client/public/css/template.css
@@ -4,6 +4,11 @@
     --site-width: 1100px;
 }
 
+html {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 body {
     font-family: Roboto;
 }
